--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.11.0",
     "apollo-server": "^2.22.2",
     "graphql": "^15.5.0",
     "nodemon": "^2.0.7"
