--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "apollo-datasource-rest": "^0.11.0",
     "apollo-server": "^2.22.2",
     "graphql": "^15.5.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "pg": "^8.5.1",
+    "sequelize": "^6.6.2"
   }
 }
