--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "apollo-datasource-rest": "^0.11.0",
     "apollo-server": "^2.22.2",
     "graphql": "^15.5.0",
-    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "sequelize": "^6.6.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.12",
+    "nodemon": "^2.0.7"
   }
 }
