--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server": "^2.22.2",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
