--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "apollo-datasource-rest": "^0.11.0",
     "apollo-server": "^2.22.2",
+    "express": "^4.17.1",
+    "express-openid-connect": "^2.3.0",
     "graphql": "^15.5.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
