--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-datasource-rest": "^0.11.0",
-    "apollo-server": "^2.22.2",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-openid-connect": "^2.3.0",
     "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
